[gd_scene load_steps=7 format=3 uid="uid://chsd6qdqb1xn7"]

[ext_resource type="Script" path="res://scenes/levels/Presents.gd" id="1_epxb0"]
[ext_resource type="Shader" path="res://scenes/levels/FX.gdshader" id="2_ttlc2"]
[ext_resource type="Texture2D" uid="uid://dlg5xnjdpvmiu" path="res://sprites/energy.jpg" id="3_h3yox"]
[ext_resource type="FontFile" uid="uid://cqp5o2vpb07yg" path="res://fonts/prstartk.ttf" id="7_s7h6k"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0eiud"]
shader = ExtResource("2_ttlc2")
shader_parameter/apply = true
shader_parameter/amount = 0.1

[sub_resource type="Environment" id="Environment_oaqbm"]
background_mode = 3
ambient_light_source = 2
glow_enabled = true
glow_blend_mode = 1
glow_hdr_threshold = 0.1

[node name="Presents" type="Node2D"]
script = ExtResource("1_epxb0")

[node name="lbl_text" type="Label" parent="."]
offset_left = 15.0
offset_top = 13.0
offset_right = 361.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_s7h6k")
text = "SAKURA BIOS v2.1
Copyrigth 1998"
vertical_alignment = 1

[node name="lbl_text3" type="Label" parent="."]
offset_left = 15.0
offset_top = 213.0
offset_right = 830.0
offset_bottom = 273.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_s7h6k")
text = "SAKURIUM ODP-MMX CPU at 200MHZ"
vertical_alignment = 1

[node name="lbl_text2" type="Label" parent="."]
offset_left = 15.0
offset_top = 237.0
offset_right = 830.0
offset_bottom = 297.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_s7h6k")
text = "Memory test:"
vertical_alignment = 1

[node name="lbl_text4" type="Label" parent="."]
visible = false
offset_left = 15.0
offset_top = 281.0
offset_right = 863.0
offset_bottom = 341.0
scale = Vector2(1, 1.01697)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_s7h6k")
text = "Award Plug and Play BIOS Extension v1.0A
Copyright 1998
   Detecting IDE Primary Master... [Press F4 to skip]"
vertical_alignment = 1

[node name="FX" type="ColorRect" parent="."]
z_index = 4096
material = SubResource("ShaderMaterial_0eiud")
offset_left = -57.0
offset_top = -14.0
offset_right = 1214.0
offset_bottom = 681.0
mouse_filter = 2

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 326)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_oaqbm")

[node name="Energy" type="Sprite2D" parent="."]
position = Vector2(1020, 90)
scale = Vector2(0.21372, 0.21372)
texture = ExtResource("3_h3yox")

[node name="Timer" type="Timer" parent="."]
wait_time = 13.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
